--- a/index.html
+++ b/index.html
@@ -41,6 +41,64 @@
         </div>
     </section>
 
+    <section class="about">
+        <div class="container section">
+            <div class="row flex">
+                <div class="col s12 m6 l9 xl8">
+                    <div class="about-content">
+                        <h4>درباره ما</h4>
+                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+                            چاپگرها و متون بلکه
+                            روزنامه
+                            و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای
+                            متنوع با هدف بهبود ابزارهای
+                            کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و
+                            متخصصان را می طلبد تا با نرم
+                            افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان
+                            فارسی ایجاد کرد. در این
+                            صورت
+                            می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و
+                            زمان مورد نیاز شامل
+                            حروفچینی
+                            دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                        </p>
+                    </div>
+                    <div class="row flex">
+                        <div class="col s6 m3 l3">
+                            <div class="about-item">
+                                <h4>41000</h4>
+                                <h6>مورد اول</h6>
+                            </div>
+                        </div>
+                        <div class="col s6 m3 l3">
+                            <div class="about-item">
+                                <h4>41000</h4>
+                                <h6>مورد دوم</h6>
+                            </div>
+                        </div>
+                        <div class="col s6 m3 l3">
+                            <div class="about-item">
+                                <h4>41000</h4>
+                                <h6>مورد سوم</h6>
+                            </div>
+                        </div>
+                        <div class="col s6 m3 l3">
+                            <div class="about-item">
+                                <h4>41000</h4>
+                                <h6>مورد چهارم</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="about-btn">تماس با ما</button>
+                </div>
+                <div class="col s12 m6 l3 xl4">
+                    <img src="./images/about.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
 
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/materialize.min.js"></script>
