--- a/index.html
+++ b/index.html
@@ -99,6 +99,63 @@
         </div>
     </section>
 
+    <section class="service section">
+        <div class="container">
+            <h4>خدمات ما</h4>
+            <div class="row flex">
+                <div class="col s12 m6 l4">
+                    <div class="service-item">
+                        <img src="./images/service/1.jpg" alt="">
+                        <span>
+                            <p>خدمت اول</p>
+                        </span>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="service-item">
+                        <img src="./images/service/2.jpg" alt="">
+                        <span>
+                            <p>خدمت دوم</p>
+                        </span>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="service-item">
+                        <img src="./images/service/3.jpg" alt="">
+                        <span>
+                            <p>خدمت سوم</p>
+                        </span>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="service-item">
+                        <img src="./images/service/4.jpg" alt="">
+                        <span>
+                            <p>خدمت چهارم</p>
+                        </span>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="service-item">
+                        <img src="./images/service/5.jpg" alt="">
+                        <span>
+                            <p>خدمت پنجم</p>
+                        </span>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="service-item">
+                        <img src="./images/service/6.jpg" alt="">
+                        <span>
+                            <p>خدمت ششم</p>
+                        </span>
+                    </div>
+            </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
 
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/materialize.min.js"></script>
