--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/materialize.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>خدمات عکاسی</title>
 </head>
 
 <body>
@@ -150,9 +150,73 @@
                             <p>خدمت ششم</p>
                         </span>
                     </div>
-            </div>
+                </div>
             </div>
         </div>
+        </div>
+    </section>
+
+<!-- work -->
+
+    <section class="work section">
+        <div class="container">
+            <h4>کارهای برتر</h4>
+            <div class="row flex">
+                <div class="col s12 m6 l4">
+                    <div class="work-item">
+                        <img src="./images/works/thumb/1.jpg" alt="">
+                        <span>
+                            <p>کار برتر اول</p>
+                            <i class="far fa-eye"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="work-item">
+                        <img src="./images/works/thumb/2.jpg" alt="">
+                        <span>
+                            <p>کار برتر دوم</p>
+                            <i class="far fa-eye"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="work-item">
+                        <img src="./images/works/thumb/3.jpg" alt="">
+                        <span>
+                            <p>کار برتر سوم</p>
+                            <i class="far fa-eye"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="work-item">
+                        <img src="./images/works/thumb/4.jpg" alt="">
+                        <span>
+                            <p>کار برتر چهارم</p>
+                            <i class="far fa-eye"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="work-item">
+                        <img src="./images/works/thumb/5.jpg" alt="">
+                        <span>
+                            <p>کار برتر پنجم</p>
+                            <i class="far fa-eye"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="work-item">
+                        <img src="./images/works/thumb/6.jpg" alt="">
+                        <span>
+                            <p>کار برتر ششم</p>
+                            <i class="far fa-eye"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
