--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
     </section>
 
-<!-- work -->
+    <!-- work -->
 
     <section class="work section">
         <div class="container">
@@ -214,6 +214,48 @@
                             <p>کار برتر ششم</p>
                             <i class="far fa-eye"></i>
                         </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- contact -->
+
+    <section class="contact section ">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m12">
+                    <div class="contact-img">
+                        <div class="title">
+                            <h4>راه های ارتباطی</h4>
+                        </div>
+                    </div>
+                    <div class="contact-desc">
+                        <div class="row">
+                            <form class="col s12">
+                                <div class="row flex">
+                                    <div class="input-field col s6">
+                                        <label for="name">نام</label>
+                                        <input type="text" name="name" placeholder="نام شما">
+                                    </div>
+                                    <div class="input-field col s6">
+                                        <label for="emial">ایمیل یا تلفن</label>
+                                        <input type="text" name="emial" placeholder="ایمیل یا تلفن شما ">
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="input-field">
+                                        <textarea placeholder="چیزی بنویسید" class="materialize-textarea"></textarea>
+                                    </div>
+                                </div>
+
+                                <div class="form-btn">
+                                    <button>ارسال</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
