--- a/index.html
+++ b/index.html
@@ -259,8 +259,52 @@
                     </div>
                 </div>
             </div>
+            <div class="row flex">
+                <div class="col s12 m6 l4">
+                    <div class="info">
+                        <h6>ایمیل</h6>
+                        <p>m@gmail.com</p>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="info">
+                        <h6>تلفن</h6>
+                        <p>021-66885544</p>
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="info">
+                        <h6>آدرس</h6>
+                        <p>تهران - میدان انقلاب -پلاک 77</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col s12">
+                    <div class="social">
+                        <ul>
+                            <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col s12">
+                    <h6>طراحی شده با <i class="fas fa-heart"></i> و <i class="fas fa-code"></i> توسط mrez</h6>
+                    <p>تمامی حقوق مادی و معنوی برای ما محفوظ است.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="./js/jquery-3.5.1.min.js"></script>
