--- a/index.html
+++ b/index.html
@@ -164,56 +164,68 @@
             <div class="row flex">
                 <div class="col s12 m6 l4">
                     <div class="work-item">
-                        <img src="./images/works/thumb/1.jpg" alt="">
-                        <span>
-                            <p>کار برتر اول</p>
-                            <i class="far fa-eye"></i>
-                        </span>
+                        <div class="work-item-inner">
+                            <img src="./images/works/thumb/1.jpg" alt="">
+                            <span>
+                                <p>کار برتر اول</p>
+                                <i class="far fa-eye"></i>
+                            </span>
+                        </div>
                     </div>
                 </div>
                 <div class="col s12 m6 l4">
                     <div class="work-item">
-                        <img src="./images/works/thumb/2.jpg" alt="">
-                        <span>
-                            <p>کار برتر دوم</p>
-                            <i class="far fa-eye"></i>
-                        </span>
+                        <div class="work-item-inner">
+                            <img src="./images/works/thumb/2.jpg" alt="">
+                            <span>
+                                <p>کار برتر دوم</p>
+                                <i class="far fa-eye"></i>
+                            </span>
+                        </div>
                     </div>
                 </div>
                 <div class="col s12 m6 l4">
                     <div class="work-item">
+                       <div class="work-item-inner">
                         <img src="./images/works/thumb/3.jpg" alt="">
                         <span>
                             <p>کار برتر سوم</p>
                             <i class="far fa-eye"></i>
                         </span>
+                       </div>
                     </div>
                 </div>
                 <div class="col s12 m6 l4">
                     <div class="work-item">
-                        <img src="./images/works/thumb/4.jpg" alt="">
-                        <span>
-                            <p>کار برتر چهارم</p>
-                            <i class="far fa-eye"></i>
-                        </span>
+                        <div class="work-item-inner">
+                            <img src="./images/works/thumb/4.jpg" alt="">
+                            <span>
+                                <p>کار برتر چهارم</p>
+                                <i class="far fa-eye"></i>
+                            </span>
+                        </div>
                     </div>
                 </div>
                 <div class="col s12 m6 l4">
                     <div class="work-item">
+                       <div class="work-item-inner">
                         <img src="./images/works/thumb/5.jpg" alt="">
                         <span>
                             <p>کار برتر پنجم</p>
                             <i class="far fa-eye"></i>
                         </span>
+                       </div>
                     </div>
                 </div>
                 <div class="col s12 m6 l4">
                     <div class="work-item">
-                        <img src="./images/works/thumb/6.jpg" alt="">
-                        <span>
-                            <p>کار برتر ششم</p>
-                            <i class="far fa-eye"></i>
-                        </span>
+                        <div class="work-item-inner">
+                            <img src="./images/works/thumb/6.jpg" alt="">
+                            <span>
+                                <p>کار برتر ششم</p>
+                                <i class="far fa-eye"></i>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -305,6 +317,28 @@
             </div>
         </div>
     </footer>
+
+
+    <section class="lightbox">
+        <div class="img-box">
+            <div class="close">
+                <i class="fas fa-times"></i>
+            </div>
+            <img src="./images/works/large/1.jpg " class="lightbox-img" alt="">
+            <div class="lightbox-caption">
+                <div class="lightbox-category">
+                    <h6>کپشن عکس اول</h6>
+                </div>
+                <div class="lightbox-counter">
+                    1/6
+                </div>
+            </div>
+            <div class="lightbox-control">
+                <div class="next"><i class="fas fa-angle-right"></i></div>
+                <div class="perv"><i class="fas fa-angle-left"></i></div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="./js/jquery-3.5.1.min.js"></script>
