--- a/index.html
+++ b/index.html
@@ -162,71 +162,59 @@
         <div class="container">
             <h4>کارهای برتر</h4>
             <div class="row flex">
-                <div class="col s12 m6 l4">
-                    <div class="work-item">
+                <div class="col s12 m6 l4 work-item">
                         <div class="work-item-inner">
-                            <img src="./images/works/thumb/1.jpg" alt="">
+                            <img src="./images/works/thumb/1.jpg" data-target="./images/works/large/1.jpg" alt="">
                             <span>
                                 <p>کار برتر اول</p>
                                 <i class="far fa-eye"></i>
                             </span>
                         </div>
-                    </div>
                 </div>
-                <div class="col s12 m6 l4">
-                    <div class="work-item">
+                <div class="col s12 m6 l4 work-item">
                         <div class="work-item-inner">
-                            <img src="./images/works/thumb/2.jpg" alt="">
+                            <img src="./images/works/thumb/2.jpg" data-target="./images/works/large/2.jpg" alt="">
                             <span>
                                 <p>کار برتر دوم</p>
                                 <i class="far fa-eye"></i>
                             </span>
                         </div>
-                    </div>
                 </div>
-                <div class="col s12 m6 l4">
-                    <div class="work-item">
+                <div class="col s12 m6 l4 work-item">
                        <div class="work-item-inner">
-                        <img src="./images/works/thumb/3.jpg" alt="">
+                        <img src="./images/works/thumb/3.jpg" data-target="./images/works/large/3.jpg" alt="">
                         <span>
                             <p>کار برتر سوم</p>
                             <i class="far fa-eye"></i>
                         </span>
                        </div>
-                    </div>
                 </div>
-                <div class="col s12 m6 l4">
-                    <div class="work-item">
+                <div class="col s12 m6 l4 work-item">
                         <div class="work-item-inner">
-                            <img src="./images/works/thumb/4.jpg" alt="">
+                            <img src="./images/works/thumb/4.jpg" data-target="./images/works/large/4.jpg" alt="">
                             <span>
                                 <p>کار برتر چهارم</p>
                                 <i class="far fa-eye"></i>
                             </span>
                         </div>
-                    </div>
                 </div>
-                <div class="col s12 m6 l4">
-                    <div class="work-item">
+                <div class="col s12 m6 l4 work-item">
                        <div class="work-item-inner">
-                        <img src="./images/works/thumb/5.jpg" alt="">
+                        <img src="./images/works/thumb/5.jpg" data-target="./images/works/large/5.jpg" alt="">
                         <span>
                             <p>کار برتر پنجم</p>
                             <i class="far fa-eye"></i>
                         </span>
                        </div>
-                    </div>
                 </div>
-                <div class="col s12 m6 l4">
-                    <div class="work-item">
+                <div class="col s12 m6 l4 work-item">
                         <div class="work-item-inner">
-                            <img src="./images/works/thumb/6.jpg" alt="">
+                            <img src="./images/works/thumb/6.jpg" data-target="./images/works/large/6.jpg" alt="">
                             <span>
                                 <p>کار برتر ششم</p>
                                 <i class="far fa-eye"></i>
                             </span>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -342,6 +330,7 @@
 
 
     <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/main.js"></script>
     <script src="./js/materialize.min.js"></script>
     <script src="./js/all.min.js"></script>
 </body>
