--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             </div>
             <div class="lightbox-control">
                 <div class="next"><i class="fas fa-angle-right"></i></div>
-                <div class="perv"><i class="fas fa-angle-left"></i></div>
+                <div class="prev"><i class="fas fa-angle-left"></i></div>
             </div>
         </div>
     </section>
